Closed Bug 1749291 Opened 2 years ago Closed 2 years ago

Box around extension popups and Pocket popup

Categories

(Core :: Widget: Gtk, defect)

Firefox 97
Desktop
Linux
defect

Tracking

()

VERIFIED FIXED
98 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox95 --- unaffected
firefox96 --- unaffected
firefox97 --- verified
firefox98 --- verified

People

(Reporter: viktor_jaegerskuepper, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(2 files)

With the current Nighty I almost always get a box around extension popups (e.g. uBlock Origin) and around the Pocket popup, but not around e.g. the hamburger menu and the bookmarks menu popup. This is a recent regression.

Result given by mozregression:
Last good revision: 8d62b2808079d574d68533b63c967a08f78bc0db
First bad revision: 7e3cdb88790d2ddf7a3797a4374cf38f106b86d0
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=8d62b2808079d574d68533b63c967a08f78bc0db&tochange=7e3cdb88790d2ddf7a3797a4374cf38f106b86d0

This is part of bug 1742358.

OS: Arch Linux
Seen with Gnome X11/XWayland/Wayland and KDE Wayland

Keywords: regression
Regressed by: 1742358

I don't see this with gfx.webrender.software enabled nor with gfx.webrender.compositor.force-enabled enabled on Gnome and KDE.

Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Ever confirmed: true
Flags: needinfo?(emilio)
OS: Unspecified → Linux
Hardware: Unspecified → Desktop

IIUC, bug 1674473 fixed clear color for SW WR back then.

huh, I tested the hamburger menu but apparently not the webext popup, fun.

Assignee: nobody → emilio
Flags: needinfo?(emilio)

They don't have a parent but they aren't root windows and won't receive
the non-blank paint notification.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8d2a65f1e836
Don't change clear color of popups. r=stransky
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch

Please nominate this for Beta approval when you get a chance.

Flags: needinfo?(emilio)

Comment on attachment 9258368 [details]
Bug 1749291 - Don't change clear color of popups. r=stransky

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial one-liner
  • String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9258368 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Reproduced this issue on an affected Nightly build 98.0a1 (20220110213134) on Ubuntu 20.04.

Verified fixed on 98.0a1 (20220112095252), Ubuntu 20.04. The box no longer appears around Pocket or extension popups.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Comment on attachment 9258368 [details]
Bug 1749291 - Don't change clear color of popups. r=stransky

Approved for 97.0b3. Thanks.

Attachment #9258368 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Verified fixed on 97.0b3 using a treeherder build (Build ID: 20220112193650) on Ubuntu 20.04.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: