Bug 1749291 - Don't change clear color of popups. r=stransky, a=dmeehan

They don't have a parent but they aren't root windows and won't receive
the non-blank paint notification.

Differential Revision: https://phabricator.services.mozilla.com/D135533